# rho-tts

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
examples/: basic_usage.py  custom_provider.py  voice_cloning.py
src/ralph_tts/: __init__.py  base_tts.py  factory.py  generator.py
src/ralph_tts/providers/: chatterbox.py  qwen.py
src/ralph_tts/validation/classifier/: __init__.py  trainer.py
src/rho_tts/: __init__.py  base_tts.py  cancellation.py  exceptions.py  factory.py  provider_info.py  result.py
src/rho_tts/isolation/: __init__.py  __main__.py  process_manager.py  protocol.py  proxy.py  venv_manager.py  worker.py
src/rho_tts/providers/: chatterbox.py  qwen.py
src/rho_tts/ui/: __init__.py  __main__.py  app.py  callbacks.py  config.py  session.py  state.py
src/rho_tts/validation/: __init__.py
src/rho_tts/validation/classifier/: __init__.py  trainer.py
src/rho_tts/validation/stt/: __init__.py  number_normalizer.py  stt_validator.py
tests/: scratch_test.py  test_async.py  test_audio_processing.py  test_auto_sort.py  test_cancellation.py  test_context_manager.py  test_drift_api.py  test_exceptions.py  test_factory.py  test_format_conversion.py  test_number_normalizer.py  test_packaging.py  test_pipeline.py  test_provider_info.py  test_result.py  test_session.py  test_smart_segmentation.py  test_sound_decay.py  test_speed_pitch.py  test_streaming.py  test_synthesize.py  test_text_processing.py  test_ui_config.py  test_ui_state.py
tests/test_isolation/: test_factory_integration.py  test_process_manager.py  test_protocol.py  test_proxy.py  test_streaming.py  test_venv_manager.py  test_worker.py
